force-app/main/default/objects/LLC_BI__Policy_Exception__c/fields/LLC_BI__Covenant_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Covenant_Mgmt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup field made available only when a policy exception with the &quot;Covenant&quot;  type is selected.  This field allows the user to look up the Covenant record the policy exception is related to. This is a smart lookup only showing the Covenants that are already associated to the loan this exception is being applied to.</description>
    <label>Covenant Mgmt</label>
    <referenceTo>LLC_BI__Covenant2__c</referenceTo>
    <relationshipLabel>Policy Exceptions</relationshipLabel>
    <relationshipName>Policy_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>