force-app/main/default/objects/LLC_BI__Policy_Exception__c/fields/LLC_BI__Relationship__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a look up field available when setting a policy exception. This field allows the user to look up the relationship associated with the Policy Exception. This is a smart lookup only showing the relationships associated to the loan through entity involvement.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policy Exceptions</relationshipLabel>
    <relationshipName>Policy_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>