force-app/main/default/objects/LLC_BI__Policy_Exception__c/fields/LLC_BI__Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Status__c</fullName>
    <description>This field can be manually selected or automatically populated. This field specifies the status of the exception. For users with the appropriate permission to edit an exception status without mitigating reasons can manually select the status. Users without this permission will have the status automatically set when an action (such as mitigating reasons) are added to the policy exception.</description>
    <label>Exception status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waived</fullName>
            </value>
            <value>
                <fullName>Mitigated</fullName>
            </value>
            <value>
                <fullName>Unmitigated</fullName>
                <default>true</default>
                <label>Unmitigated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>